--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.6.3",
     "astro": "^5.16.6",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
