--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -22,7 +22,7 @@
 backend:
   name: github
   repo: LucasCardoso574/Elonet_Web
-  branch: main
+  branch: master
 
 media_folder: "public/images/noticias" # Media files will be stored in the repo under public/images/noticias
 public_folder: "/images/noticias" # The src attribute for uploaded media will begin with /images/noticias
